feat: add private broadcasting, message
Добавил функционал приватного чата.
