# routes/api.php
@@ -1,7 +1,9 @@
 <?php
 
 use App\Http\Controllers\Api\V1\AuthController;
-use App\Http\Controllers\Api\V1\HomeController;
+use App\Http\Controllers\Api\V1\ChatController;
+use App\Http\Controllers\Api\V1\ChatUserController;
+use App\Http\Controllers\Api\V1\MessageController;
 use App\Http\Controllers\Api\V1\UserController;
 use App\Http\Resources\UserResource;
 use Illuminate\Http\Request;
@@ -11,16 +13,18 @@ Route::get('/user', function (Request $request) {
     return UserResource::make($request->user());
 })->middleware('auth:sanctum');
 
-Route::prefix('v1')->group(function () {
+Route::prefix('/v1')->group(function () {
     Route::post('/register', [AuthController::class, 'register']);
     Route::post('/login', [AuthController::class, 'login'])->name('login');
 
     Route::middleware('auth:sanctum')->group(function () {
-        Route::get('/users', [UserController::class, 'index']);
+        Route::get('/users', [UserController::class, 'index'])->name('users');
+        Route::get('/messages/{chat}', [MessageController::class, 'messages'])->name('messages');
+        Route::post('/message/{chat}', [MessageController::class, 'message'])->name('message');
 
+        Route::prefix('/chats')->group(function () {
+            Route::get('/', [ChatUserController::class, 'index']);
+            Route::post('/', [ChatUserController::class, 'store']);
+        });
     });
-    Route::get('/messages', [HomeController::class, 'messages'])
-        ->name('messages');
-    Route::post('/message', [HomeController::class, 'message'])
-        ->name('message');
 });
